<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.foodbank.fragments.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_categories"
        android:name="com.example.foodbank.fragments.categories.CategoriesFragment"
        android:label="@string/menu_categories"
        tools:layout="@layout/fragment_categories" />

    <fragment
        android:id="@+id/nav_products"
        android:name="com.example.foodbank.fragments.products.MyProductsFragment"
        android:label="@string/menu_products"
        tools:layout="@layout/fragment_my_products" />

    <fragment
        android:id="@+id/nav_add_product"
        android:name="com.example.foodbank.fragments.addProduct.AddProductFragment"
        android:label="@string/menu_add_product"
        tools:layout="@layout/fragment_add_product" />

    <fragment
        android:id="@+id/nav_favorites"
        android:name="com.example.foodbank.fragments.favorites.FavoritesFragment"
        android:label="@string/menu_favorites"
        tools:layout="@layout/fragment_favorites" />

    <fragment
        android:id="@+id/nav_healthy"
        android:name="com.example.foodbank.fragments.healthy.HealthyFragment"
        android:label="@string/menu_healthy"
        tools:layout="@layout/fragment_healthy" />

    <fragment
        android:id="@+id/nav_avoid"
        android:name="com.example.foodbank.fragments.avoid.AvoidFragment"
        android:label="@string/menu_avoid"
        tools:layout="@layout/fragment_avoid" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.example.foodbank.fragments.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />
</navigation>