<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.foodbank.fragments.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />


    <fragment
        android:id="@+id/nav_products"
        android:name="com.example.foodbank.fragments.products.MyProductsFragment"
        android:label="@string/menu_products"
        tools:layout="@layout/fragment_my_products" />

    <fragment
        android:id="@+id/nav_add_product"
        android:name="com.example.foodbank.fragments.addProduct.AddProductFragment"
        android:label="@string/menu_add_product"
        tools:layout="@layout/fragment_add_product" />

</navigation>