<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".main_activities.ViewProductActivity">

    <FrameLayout
        android:id="@+id/frameLayout_productsInCategory"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible">

        <Button
            android:id="@+id/button_tryAgain"
            android:layout_width="wrap_content"
            android:layout_height="56dp"
            android:layout_gravity="center_vertical|center_horizontal"
            android:text="@string/try_again" />
    </FrameLayout>

    <ScrollView
        android:id="@+id/scrollView_viewProduct"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView_viewProduct"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="10dp"
            android:visibility="visible"
            app:cardCornerRadius="4dp">

            <RelativeLayout
                android:id="@+id/view_list_item_relative_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/imageView_viewProductImage"
                    android:layout_width="65dp"
                    android:layout_height="77dp"
                    android:layout_alignParentStart="true"
                    android:background="@color/cyan_500"
                    android:backgroundTint="@color/grey_700"
                    app:shapeAppearanceOverlay="@style/Circular" />

                <TextView
                    android:id="@+id/textView_viewProductTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="10dp"
                    android:layout_toStartOf="@id/checkBox_viewStarred"
                    android:layout_toEndOf="@id/imageView_viewProductImage"
                    android:ellipsize="end"
                    android:maxLines="4"
                    android:text="@string/title"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/imageView_viewProductNutriScore"
                    android:layout_width="80dp"
                    android:layout_height="40dp"
                    android:layout_below="@id/textView_viewProductTitle"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_toEndOf="@id/imageView_viewProductImage"
                    android:background="#00FFFFFF"
                    android:src="@drawable/d_img_nutriscore_a"
                    android:textColor="@color/cyan_700"
                    app:shapeAppearanceOverlay="@style/Circular" />

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/imageView_viewProductEcoScore"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_below="@id/textView_viewProductTitle"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_toEndOf="@id/imageView_viewProductNutriScore"
                    android:background="#00FFFFFF"
                    android:src="@drawable/d_img_ecoscore_a"
                    android:text="@string/nova_4"
                    app:shapeAppearanceOverlay="@style/Circular" />

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/imageView_viewNovaGroup"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_below="@id/textView_viewProductTitle"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_toEndOf="@id/imageView_viewProductEcoScore"
                    android:src="@drawable/d_img_novagroup_1"
                    app:shapeAppearanceOverlay="@style/Circular" />

                <CheckBox
                    android:id="@+id/checkBox_viewStarred"
                    style="?android:attr/starStyle"
                    android:layout_width="33dp"
                    android:layout_height="30dp"
                    android:layout_alignParentEnd="true"
                    android:clickable="false" />

                <TextView
                    android:id="@+id/textView_viewProductBarcode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/imageView_viewProductNutriScore"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginVertical="10dp"
                    android:text="@string/barcode" />

                <TextView
                    android:id="@+id/textView_viewProductIngredients"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/textView_viewProductBarcode"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginVertical="10dp"
                    android:text="@string/ingredients" />

                <TextView
                    android:id="@+id/textView_viewProductNutriments"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/textView_viewProductIngredients"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginVertical="10dp"
                    android:text="@string/nutriments" />

                <TextView
                    android:id="@+id/textView_viewProductVegan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/textView_viewProductNutriments"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginVertical="10dp"
                    android:text="@string/vegan" />

                <TextView
                    android:id="@+id/textView_viewProductVegetarian"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/textView_viewProductVegan"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginVertical="10dp"
                    android:text="@string/vegetarian" />

                <TextView
                    android:id="@+id/textView_viewProductCategoriesImported"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/textView_viewProductVegetarian"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginVertical="10dp"
                    android:text="@string/categories" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>
    </ScrollView>
</RelativeLayout>