<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.categories.ProductsInCategoryActivity">

    <FrameLayout
        android:id="@+id/frameLayout_productsInCategory"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible">

        <Button
            android:id="@+id/button_tryAgain"
            android:layout_width="wrap_content"
            android:layout_height="56dp"
            android:layout_gravity="center_vertical|center_horizontal"
            android:text="@string/try_again" />
    </FrameLayout>

    <TextView
        android:id="@+id/textView_showPage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_alignParentEnd="true"
        android:layout_margin="10dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView_viewCategoryProducts"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:layout_marginHorizontal="4dp"
        android:layout_below="@id/textView_showPage"
        android:scrollbars="vertical" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true">


        <Button
            android:id="@+id/button_previousPage"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_gravity="start"
            android:layout_marginHorizontal="30dp"
            android:onClick="previousPage"
            android:text="@string/previousPage"
            android:backgroundTint="@color/cyan_200"/>

        <Button
            android:id="@+id/button_nextPage"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_gravity="end"
            android:layout_marginHorizontal="30dp"
            android:onClick="nextPage"
            android:text="@string/nextPage"
            android:backgroundTint="@color/cyan_200"/>
    </FrameLayout>

</RelativeLayout>

