<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main_activities.SelectListActivity">

    <FrameLayout
        android:id="@+id/frameLayout_showSelectLists"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/spinner_listsOptions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginVertical="10dp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView_customLists"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/spinner_listsOptions"
                android:layout_centerHorizontal="true"
                android:layout_marginHorizontal="4dp"
                android:scrollbars="vertical" />
        </RelativeLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floatingActionButton_AddList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="20dp"
            android:src="@android:drawable/ic_input_add"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/frameLayout_showCreateList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible">


        <androidx.cardview.widget.CardView
            android:id="@+id/cardView_createList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20sp"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/list_item_relative_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title" />

                <EditText
                    android:id="@+id/editText_listTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapSentences"
                    android:textSize="28sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/description" />

                <EditText
                    android:id="@+id/editText_listDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapSentences"
                    android:textSize="28sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/color" />

                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/spinner_selectColor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="28sp"
                    android:textStyle="bold" />


                <androidx.coordinatorlayout.widget.CoordinatorLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/button_goBack"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom|start"
                        android:backgroundTint="@color/purple_200"
                        android:text="@string/goBack" />

                    <Button
                        android:id="@+id/button_submitList"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom|end"
                        android:backgroundTint="@color/cyan_200"
                        android:onClick="createList"
                        android:text="@string/OK" />

                </androidx.coordinatorlayout.widget.CoordinatorLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>