<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.addProduct.AddProductFragment">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/textInputEnterBarcode"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/text_input_edit_text"
        android:hint="@string/trouble_scanning_enter_barcode"
        android:textColor="@color/grey_700" />

    <TextView
        android:id="@+id/textViewAddProductGuideline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="26dp"
        android:text="@string/align_the_bar_code_within_frame_to_scan_the_product"
        android:textSize="16sp" />

    <Button
        android:id="@+id/buttonAddProduct"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_below="@id/textInputEnterBarcode"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="10dp"
        android:text="@string/ok" />

    <androidx.cardview.widget.CardView
        android:id="@+id/addItemCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttonAddProduct"
        android:layout_margin="20sp">

        <LinearLayout
            android:id="@+id/list_item_relative_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Title" />

            <EditText
                android:id="@+id/add_Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:textSize="28sp"
                android:textStyle="bold" />

            <CheckBox
                android:id="@+id/add_Starred"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end" />


            <androidx.coordinatorlayout.widget.CoordinatorLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/insert_note_btn"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|end"
                    android:text="@string/ok"/>

            </androidx.coordinatorlayout.widget.CoordinatorLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>